# Alter-Solutions-Exercise

./: .gitignore  README.md  banana_detector.py  banana_detector.service  banana_detector.socket  logger.py  pyproject.toml  setup-ubintu.sh  setup.sh
service/: banana_detector.py
tests/: conftest.py  test_banana_detector.py
