[tool.poetry]
name = "alter-solutions-exercise-1"
version = "1"
description = ""
authors = ["Daria Neznaeva <darianeznaeva@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
